--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,7 +1,19 @@
 @import "bootstrap";
 
-body {
+/* body {
+  background: image-url("woodbg.jpg") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+} */
 
+body {
+  background: url(http://38.media.tumblr.com/d07ad072477d51b8d5d4f30f6051e25a/tumblr_n6rzjyQPmA1st5lhmo1_1280.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 .container {
 	padding: 0;
@@ -97,7 +109,7 @@ html, body,
 	display: block;
 	position: relative;
 	z-index: 9999;
-	color: #05243F;
+	color: rgb(209, 41, 41);
 	width: 46px;
 	height: 46px;
 	outline: none;
@@ -161,4 +173,5 @@ html, body,
 }
 .navbar {
 	border-radius: 0;
+	border: none;
 }
